tests/ui/const-generics/issue-66451.stderr
error[E0308]: mismatched types
  --> $DIR/issue-66451.rs:29:10
   |
LL |       let y: Test<{
   |  ____________-
LL | |         Foo {
LL | |             value: 3,
LL | |             nested: &Bar(5),
LL | |         }
LL | |     }> = x;
   | |      -   ^ expected `Foo { value: 3, nested: &Bar::<i32>(5) }`, found `Foo { value: 3, nested: &Bar::<i32>(4) }`
   | |______|
   |        expected due to this
   |
   = note: expected struct `Test<Foo { value: 3, nested: &Bar::<i32>(5) }>`
              found struct `Test<Foo { value: 3, nested: &Bar::<i32>(4) }>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
